--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,1 @@
-__pycache__/__init__.cpython-310.pyc
-__pycache__/load.cpython-310.pyc
-__pycache__/matrix.cpython-310.pyc
-__pycache__/regression.cpython-310.pyc
+__pycache__/
